--- a/package.json
+++ b/package.json
@@ -1,39 +1,29 @@
 {
-  "name": "immovableconnect",
+  "name": "express",
   "version": "1.0.0",
-  "description": "",
-  "main": "src/app/index.js",
+  "description": "Immovable Connect Cell Group COKG",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack",
-    "dev": "webpack-dev-server"
+    "server": "nodemon server",
+    "client": "npm run dev --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.26.10",
-    "@babel/node": "^7.26.0",
-    "@babel/preset-env": "^7.26.9",
-    "@babel/preset-react": "^7.26.3",
-    "@babel/register": "^7.25.9",
-    "babel-loader": "^10.0.0",
-    "css-loader": "^7.1.2",
-    "style-loader": "^4.0.0",
-    "webpack": "^5.98.0",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0"
-  },
+  "author": "Visi Mansukinini",
+  "license": "MIT",
   "dependencies": {
-    "axios": "^1.8.3",
-    "bootstrap": "^5.3.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^6.30.0",
-    "react-scroll": "^1.9.3",
-    "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0",
-    "styled-components": "^6.1.15"
+    "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.0",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "express-session": "^1.18.1",
+    "nodemon": "^3.1.10",
+    "passport": "^0.7.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-local": "^1.0.0",
+    "pg": "^8.16.0"
+  },
+  "devDependencies": {
+    "concurrently": "^9.1.2"
   }
 }
