--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,5 +1,5 @@
 {
     "rewrites": [
-        { "source": "/api/(.*)", "destination": "http://localhost:3000/api/$1" }
+        { "source": "/(.*)", "destination": "/" }
     ]
 }
